Fix z-index to show preloader

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 #preloader{
 	position: fixed;
-	z-index:100;
+	z-index:1000;
 	width:100%;
 	margin:0;
 }
